# hajimi-king

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  FEATURES.md  README.md  README_WEB.md  docker-compose.yml  env.example  first_deploy.sh  init_db.py  migrate_to_provider_table.py  pyproject.toml  queries.example  requirements-web.txt  restart_hajimi_king.sh  start_all.bat  start_all.sh  start_web.py  stop_all.sh
app/: hajimi_king.py  hajimi_king_db.py  hajimi_king_threaded.py  rate_limit_monitor.py  rate_limit_revalidator.py  sync_monitor.py  task_scheduler.py
app/providers/: __init__.py  config_based_factory.py  config_key_extractor.py  key_extractor.py
common/: config.py
utils/: ai_analyzer.py  config_loader.py  crypto.py  db_manager.py  file_manager.py  github_client.py  query_generator.py  sync_utils.py  telegram_notifier.py  time_utils.py
web/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
web/api/: config.py  export.py  keys.py  notify.py  rate_limit.py  scan.py  stats.py  sync.py
web/static/css/: dashboard.css  modern.css  table.css
web/static/js/: navbar.js
web/templates/: config.html  index.html  keys.html  login.html  providers.html  stats.html
